开发环境搭建完成

--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "book",
-  "version": "1.0.0",
-  "description": "book",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sxiaomin/book.git"
-  },
-  "keywords": [
-    "book"
-  ],
-  "author": "1603",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/sxiaomin/book/issues"
-  },
-  "homepage": "https://github.com/sxiaomin/book#readme",
-  "devDependencies": {
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-sass": "^4.0.1"
-  }
+    "name": "book",
+    "version": "1.0.0",
+    "description": "book",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "gulp dev"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/sxiaomin/book.git"
+    },
+    "keywords": [
+        "book"
+    ],
+    "author": "1603",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/sxiaomin/book/issues"
+    },
+    "homepage": "https://github.com/sxiaomin/book#readme",
+    "devDependencies": {
+        "gulp-autoprefixer": "^5.0.0",
+        "gulp-sass": "^4.0.1",
+        "gulp-sequence": "^1.0.0"
+    }
 }
